--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -114,6 +114,7 @@
             </LinearLayout>
 
             <TextView
+                android:onClick="@{viewmodel::onNavigateSignup}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/linearLayout2"
